--- a/BookStore/Views/Books/Create.cshtml
+++ b/BookStore/Views/Books/Create.cshtml
@@ -1,24 +1,66 @@
-﻿@model Book
+﻿@model BookStore.Models.Book
 
-<h2>Create</h2>
+@{
+    ViewData["Title"] = "Create New";
+}
 
+<h2>@ViewData["Title"]</h2>
+
+<h4>Book</h4>
+<hr />
 <form asp-action="Create">
+    @Html.AntiForgeryToken()
+
+    
     <div class="form-group">
-        <label asp-for="Title" class="control-label"></label>
-        <input asp-for="Title" class="form-control" />
-        <span asp-validation-for="Title" class="text-danger"></span>
+        @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })
+        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
     </div>
     <div class="form-group">
-        <label asp-for="Author" class="control-label"></label>
-        <input asp-for="Author" class="form-control" />
-        <span asp-validation-for="Author" class="text-danger"></span>
+        @Html.LabelFor(model => model.Author, htmlAttributes: new { @class = "control-label" })
+        @Html.EditorFor(model => model.Author, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Author, "", new { @class = "text-danger" })
     </div>
     <div class="form-group">
-        <label asp-for="Price" class="control-label"></label>
-        <input asp-for="Price" class="form-control" />
-        <span asp-validation-for="Price" class="text-danger"></span>
+        @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label" })
+        @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
     </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label" })
+        @Html.TextAreaFor(model => model.Description, new { @class = "form-control", rows = 4 })
+        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label" })
+        @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Stock, htmlAttributes: new { @class = "control-label" })
+        @Html.EditorFor(model => model.Stock, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Stock, "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.SellerId, htmlAttributes: new { @class = "control-label" })
+        <select asp-for="SellerId" class="form-control" asp-items="ViewBag.SellerId"></select>
+        @Html.ValidationMessageFor(model => model.SellerId, "", new { @class = "text-danger" })
+    </div>
+
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-primary" />
     </div>
+
+    
+
 </form>
+
+<div>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+</div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
