--- a/BookStore/Views/Books/Edit.cshtml
+++ b/BookStore/Views/Books/Edit.cshtml
@@ -42,8 +42,8 @@
         @Html.ValidationMessageFor(model => model.Stock, "", new { @class = "text-danger" })
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.SellerId, htmlAttributes: new { @class = "control-label" })
-        <select asp-for="SellerId" class="form-control" asp-items="ViewBag.SellerId"></select>
+        @Html.LabelFor(model => model.SellerId, "Seller")
+        @Html.DropDownListFor(model => model.SellerId, (SelectList)ViewBag.SellerId, "Select Seller", new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.SellerId, "", new { @class = "text-danger" })
     </div>
 
