--- a/BookStore/Views/Books/Create.cshtml
+++ b/BookStore/Views/Books/Create.cshtml
@@ -11,7 +11,6 @@
 <form asp-action="Create">
     @Html.AntiForgeryToken()
 
-    
     <div class="form-group">
         @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })
         @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
@@ -44,21 +43,19 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.SellerId, htmlAttributes: new { @class = "control-label" })
-        <select asp-for="SellerId" class="form-control" asp-items="ViewBag.SellerId"></select>
+        @Html.DropDownListFor(model => model.SellerId, (SelectList)ViewBag.SellerId, "Select a Seller", new { @class = "form-control" })
         @Html.ValidationMessageFor(model => model.SellerId, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-primary" />
     </div>
-
-    
-
 </form>
 
 <div>
     <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
